--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4{
 header img{
     display: flex;
     margin: auto;
-    width: 400px;
+    height: 2rem;
     max-width: 100%;
 }
 
@@ -26,14 +26,13 @@ header{
 
 nav{
     max-width: 100vw;
-    box-shadow: 0 2px #d6ccc2;
+    box-shadow: 0 3px 2px #d6ccc2;
     position: sticky;
     top: 0;
     background-color: #f5ebe0;
     z-index: 10;
-    height: 4rem;
-    padding: 1rem 0 0.5rem 0;
-    flex-wrap: wrap;
+    height: 3.5em;
+    padding: 0.5em;
 }
 
 nav ul{
@@ -92,6 +91,7 @@ article{
     flex: 1;
     text-align: justify;
     padding: 1rem;
+    min-width: 300px;
 }
 
 #hero-image{
@@ -110,6 +110,21 @@ article{
     left: 7rem;
 }
 
+
+.article-image{
+    max-width: 100%;
+}
+
+article a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.readmore{
+    color: #6c584c;
+    line-height: 3rem;
+}
+
 @media screen and (max-width: 785px){
     .hero-text{
         font-size: 5rem;
@@ -119,16 +134,33 @@ article{
     nav li{
         font-size: x-large;
     }
+    nav{
+        height: 4rem;
+        padding: 1rem 0 0.5rem 0;
+        flex-wrap: wrap;
+    }
 
     main{
         margin: 0 0.5rem
     }
 }
 
+hr{
+    height: 0.1rem;
+    border: none;
+    background-color: #6c584c;
+    opacity: 0.3;
+}
+
 footer{
     display: flex;
+    padding: 1.5rem;
+    margin: auto 2rem
 }
 
 footer div{
+    display: flex;
     flex: 1;
+    align-items: center;
+    justify-content: center;
 }
