--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
 }
 
 h1, h2, h3, h4{
-    font-family: Ogg Roman, Arial, Helvetica, sans-serif;
+    font-family: "Ogg Roman", Arial, Helvetica, sans-serif;
 }
 
 header img{
@@ -42,7 +42,7 @@ nav ul{
 }
 
 nav li{
-    margin: 0.75rem;
+    padding: 0.75rem;
     font-size: 1.75rem;
     position: relative; display: inline;
 }
@@ -61,7 +61,7 @@ nav li:after {
     position: absolute;
     left: 50%;
     bottom: -2px;
-    width: 0px;
+    width: 0;
     height: 2px;
     background: #000;
     transition: all 0.45s;
@@ -161,7 +161,8 @@ hr{
 footer{
     display: flex;
     padding: 1.5rem;
-    margin: auto 2rem
+    margin: auto 2rem;
+    flex-flow: wrap;
 }
 
 footer div{
