--- a/css/styles.css
+++ b/css/styles.css
@@ -13,17 +13,6 @@ h1, h2, h3, h4{
     font-family: "Ogg Roman", Arial, Helvetica, sans-serif;
 }
 
-header img{
-    display: flex;
-    margin: auto;
-    height: 2rem;
-    max-width: 100%;
-}
-
-header{
-    padding: 2rem;
-}
-
 nav{
     max-width: 100vw;
     box-shadow: 0 3px 2px #d6ccc2;
@@ -44,7 +33,8 @@ nav ul{
 nav li{
     padding: 0.75rem;
     font-size: 1.75rem;
-    position: relative; display: inline;
+    position: relative; 
+    display: inline;
 }
 
 nav a{
@@ -76,67 +66,8 @@ nav li:after {
     text-decoration: none;
   }
 
-main{
-    margin: 0 3rem 1rem 3rem;
-}
-
-section{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 2rem auto;
-    margin-top: 0;
-}
-
-article{
-    flex: 1;
-    text-align: justify;
-    padding: 1rem;
-    min-width: 300px;
-}
-
-#hero-image{
-    width: 100%;
-    max-height: 90vh;
-    filter: opacity(0.7) drop-shadow(0 0 #6c584c);
-    z-index: -1;
-}
-
-.hero-text{
-    position: absolute;
-    font-size: 7rem;
-    z-index: 2;
-    top: 13rem;
-    color: #edede9;
-    left: 7rem;
-}
-
-
-.article-image{
-    max-width: 100%;
-}
-
-article a{
-    text-decoration: none;
-    color: inherit;
-}
-
-article:hover{
-    background-color: #fff;
-    transform: scale(1.05);
-    transition: 1s;
-}
-
-.readmore{
-    color: #6c584c;
-    line-height: 3rem;
-}
-
 @media screen and (max-width: 785px){
-    .hero-text{
-        font-size: 5rem;
-        top: 12rem;
-        left: 5rem;
-    }
+    
     nav li{
         font-size: x-large;
     }
@@ -146,9 +77,6 @@ article:hover{
         flex-wrap: wrap;
     }
 
-    main{
-        margin: 0 0.5rem
-    }
 }
 
 hr{
